--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -2,17 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.zihuan.demo.Main2Activity">
+        android:layout_height="match_parent">
 
     <Button
             android:id="@+id/bt_click"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/re_view2"
+    <com.zihuan.demo.ZCompleteRecyclerView
+            android:id="@+id/rv_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/bt_click" />
+            android:layout_below="@+id/bt_click">
+
+    </com.zihuan.demo.ZCompleteRecyclerView>
+
 </RelativeLayout>
